# code-marshal

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SKILL.md
.github/workflows/: ci.yml  release.yml
crates/api-types/: Cargo.toml
crates/api-types/bindings/: AcceptInvitationResponse.ts  CreateInvitationRequest.ts  CreateInvitationResponse.ts  CreateOrganizationRequest.ts  CreateOrganizationResponse.ts  DeleteResponse.ts  GetInvitationResponse.ts  GetOrganizationResponse.ts  HandoffInitRequest.ts  HandoffInitResponse.ts  HandoffRedeemRequest.ts  HandoffRedeemResponse.ts  Invitation.ts  InvitationStatus.ts  Issue.ts  IssueAssignee.ts  IssueComment.ts  IssueCommentReaction.ts  IssueFollower.ts  IssuePriority.ts  IssueRelationship.ts  IssueRelationshipType.ts  IssueTag.ts  ListInvitationsResponse.ts  ListMembersResponse.ts  ListOrganizationsResponse.ts  MemberRole.ts  Notification.ts  NotificationType.ts  Organization.ts  OrganizationMember.ts  OrganizationMemberInfo.ts  OrganizationMemberWithProfile.ts  OrganizationWithRole.ts  Project.ts  ProjectStatus.ts  PullRequest.ts  PullRequestStatus.ts  Tag.ts  TokenRefreshRequest.ts  (+6 more)
crates/executors/: Cargo.toml  default_mcp.json
crates/executors/bindings/: ActionType.ts  AvailabilityInfo.ts  CommandRunResult.ts  FileChange.ts  TodoItem.ts  ToolResult.ts  ToolResultValueType.ts  ToolStatus.ts
crates/executors/src/executors/: claude.rs  copilot.rs  cursor.rs  gemini.rs  qwen.rs
crates/executors/src/executors/acp/: harness.rs  session.rs
crates/executors/src/executors/claude/: client.rs  protocol.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/bindings/: ApprovalResponse.ts  ApprovalStatus.ts  CreateApprovalRequest.ts
crates/utils/src/: assets.rs  lib.rs  port_file.rs
scripts/: install.sh
src/: main.rs
