[workspace]
members = [
    "crates/executors",
    "crates/utils",
    "crates/api-types",
    "crates/git",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
